<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scop_grandG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="?attr/colorScopeBackground">

<LinearLayout
        android:id="@+id/scop_grand"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scope_view_back"
        android:src="@drawable/u48" />

    <LinearLayout
        android:id="@+id/scope_father"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent"
        android:orientation="vertical">
         <SurfaceView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="10"
             android:id="@+id/scope_view" />
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
             android:layout_weight="1"
            android:id="@+id/verti"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/freq"
                android:gravity="center"
                android:textColor="?attr/colorScopeTextB"/>
            <TextView
                android:id="@+id/freq"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="000.0"
                android:background="?attr/colorScopeTextBackground"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="Vp+:"
                android:gravity="center"
                android:textColor="?attr/colorScopeTextB"/>
            <TextView
                android:id="@+id/Vp_max"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="000.0"
                android:background="?attr/colorScopeTextBackground"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="Vp-:"
                android:gravity="center"
                android:textColor="?attr/colorScopeTextB"/>
            <TextView
                android:id="@+id/Vp_min"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="000.0"
                android:background="?attr/colorScopeTextBackground"/>
            </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:id="@+id/linear"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:paddingBottom="@dimen/small_2dp"
            android:text="@string/timeScale"
            android:gravity="center"
            android:textColor="?attr/colorScopeTextA"/>
        <Spinner
            android:id="@+id/spin_T"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:background="?attr/colorScopeSpinner"
            android:paddingBottom="@dimen/small_2dp"
            android:gravity="center"
            android:entries="@array/T" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:text="@string/amplScale"
            android:gravity="center"
            android:textColor="?attr/colorScopeTextA"/>
        <Spinner
            android:id="@+id/spin_A"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:background="?attr/colorScopeSpinner"
            android:paddingBottom="@dimen/small_2dp"
            android:gravity="center"
            android:entries="@array/A"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:paddingBottom="@dimen/small_2dp"
            android:text="@string/couple_method"
            android:gravity="center"
            android:textColor="?attr/colorScopeTextA"/>
        <Spinner
            android:id="@+id/spin_O"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:background="?attr/colorScopeSpinner"
            android:paddingBottom="@dimen/small_2dp"
            android:gravity="center"
            android:entries="@array/O"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:paddingBottom="@dimen/small_2dp"
            android:text="@string/trig_method"
            android:gravity="center"
            android:textColor="?attr/colorScopeTextA"/>
        <Spinner
            android:id="@+id/spin_C"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:background="?attr/colorScopeSpinner"
            android:gravity="center"
            android:entries="@array/C"/>
        <TextView
            android:id="@+id/trig"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:text="@string/trig_vol"
            android:gravity="center"
            android:textColor="?attr/colorScopeTextA"/>
        <TextView
            android:id="@+id/samp_rate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:text="@string/sampl_rate"
            android:gravity="center"
            android:textColor="?attr/colorScopeTextA"/>
    </LinearLayout>

</LinearLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/buttons"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prt_sc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/prt_sc"
            android:textSize="13sp"
            android:textColor="?attr/colorScopeTextButton"/>
        <Button
            android:id="@+id/trig_up"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/trig_up"
            android:textSize="13sp"
            android:textColor="?attr/colorScopeTextButton"/>
        <Button
            android:id="@+id/trig_dn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/trig_dn"
            android:textSize="13sp"
            android:textColor="?attr/colorScopeTextButton"/>
        <Button
            android:id="@+id/btn_stop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textColor="?attr/colorScopeTextButton"/>
        <Button
            android:id="@+id/btn_run"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/run"
            android:textColor="?attr/colorScopeTextButton"/>

</LinearLayout>

</LinearLayout>
