<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:background="?attr/colorMainBackground"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_weight="15" />

        <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:id="@+id/view"
        android:src="@drawable/u2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:id="@+id/main_btn_scope"
            android:background="@drawable/selector1"
            android:text="@string/Scope"
            android:textColor="?attr/colorMainTextButton"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"/>

        <Button

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:id="@+id/main_btn_set"
            android:background="@drawable/selector1"
            android:text="@string/Settings"
            android:textColor="?attr/colorMainTextButton"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:id="@+id/main_btn_about"
            android:background="@drawable/selector1"
            android:text="@string/About"
            android:textColor="?attr/colorMainTextButton"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:layout_weight="15" />



</LinearLayout>
